--- a/registration.html
+++ b/registration.html
@@ -49,7 +49,7 @@
         
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" placeholder="Email" required><br><br>
-        <label for="resume">Upload Resume:</label>
+        <label for="resume">Upload Resume</label>
         <input type="file" id="resume" name="resume" accept=".pdf,.doc,.docx" required><br><br>
 
         <button type="submit">Register</button>
